fix(style): text overflow

--- a/src/components/logs-viewer/index.less
+++ b/src/components/logs-viewer/index.less
@@ -9,9 +9,11 @@
 
     button {
       color: rgba(255, 255, 255, 70%);
+      background-color: rgba(71, 71, 71, 100%);
 
       &:hover {
         color: rgba(255, 255, 255, 90%) !important;
+        background-color: rgba(71, 71, 71, 100%) !important;
       }
     }
   }
